Updated copyright texts in source files

--- a/webapp/public/html/main.html
+++ b/webapp/public/html/main.html
@@ -1,9 +1,7 @@
 ﻿<!doctype html>
 
 <!-------------------------------------------------------------------- 
-    Licensed Materials - Property of HCL
-    (c) Copyright HCL Technologies Ltd. 2018.  All Rights Reserved.
-    Trademark of HCL Technologies Limited 
+    (c) Copyright HCL Technologies Ltd. 2018.  MIT Licensed!
 ------------------------------------------------------------------- -->
 
 <html>
