Add push button to request pedestrian crossing

--- a/webapp/public/html/main.html
+++ b/webapp/public/html/main.html
@@ -16,7 +16,7 @@
               
         <h3 id="light-label">Light: N/A</h3>        
 
-        <!-- <button type="button" id="request_data">Request Data</button> -->
+        <button type="button" id="ped_button">Pedestrian Wants to Cross</button>
 
         <div id="traffic">
             <svg>
